# satellite-cluster-api

./: .gitignore  README.md  pull_request_template.md  pyproject.toml  removed-packages.txt  requirements.txt  run_toil.sh  run_toil_REAL.sh  setup.py  test_fastqc.sh  test_req.sh  test_script.sh  test_workflow_data.json  tmp.json  toil_progress.sh
packaging/: pack_linux.sh  pack_linux_docker.sh
sat_cluster_api/: __init__.py  __main__.py  openapi.yaml
tests/: test_fastqc.sh  test_req2.sh
