[tool.poetry]
name = "sat-cluster-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "sat_cluster_api.server:run_app"

[tool.poetry.dependencies]
python = "^3.8.12"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
